# tigl-mcp

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  environment.yml  mcp_export_step.py  pyproject.toml
.github/workflows/: ci.yml  docs-pages.yml  examples.yml  ovs.yml  workflow.yml
artifacts/coverage/: coverage.json
docs/: api.rst  conf.py  index.rst  quickstart.rst
docs/examples/: generated_examples.rst  index.rst
docs/reference/: cli.rst  index.rst  session_manager.rst  stubs.rst  tools.rst
examples/: README.md  mcp_export_stl.py
examples/client/: tool_discovery.py
examples/cpacs/: export_snapshot.py  session_lifecycle.py
examples/http/: export_step_http.py  export_stl_http.py
examples/server/: http_launch_config.py
scripts/: check_coverage_thresholds.py  check_docs_consistency.py  generate_example_docs.py
src/tigl3/: __init__.py
src/tigl_mcp/: __init__.py  __main__.py  cli.py  cpacs.py  cpacs_adapter.py  cpacs_stubs.py  errors.py  fastmcp_adapter.py  main.py  runtime_check.py  server.py  session_manager.py  tooling.py  tools.py
src/tigl_mcp/tools/: __init__.py  common.py  configuration.py  cpacs_io.py  export.py  metrics.py  parameters.py  ping.py  sampling.py
src/tigl_mcp_server/: __init__.py  __main__.py  cpacs.py  cpacs_stubs.py  errors.py  fastmcp_adapter.py  main.py  runtime_check.py  session_manager.py
src/tigl_mcp_server/tools/: __init__.py  common.py  configuration.py  cpacs_io.py  export.py  metrics.py  parameters.py  ping.py  sampling.py
src/tixi3/: __init__.py
tests/: conftest.py  test_cli.py  test_cpacs_stubs.py  test_docs_structure.py  test_examples_smoke.py  test_export_component_mesh.py  test_export_configuration_cad.py  test_fastmcp_server_cli.py  test_fastmcp_server_integration.py  test_ovs_cpacs.py  test_packaging_metadata.py  test_ping.py  test_runtime_check.py  test_server.py  test_tigl_mcp_server.py  test_tool_registration.py  test_tools_export_cad.py  test_tools_export_mesh.py  test_tools_fastmcp.py  test_tools_runtime.py
