[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tigl-mcp"
version = "0.1.0"
description = "Initial MCP scaffold for TiGL"
authors = [{name = "TiGL Team"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.9.0",
  "fastmcp~=2.13.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "mypy>=1.11",
  "ruff>=0.6.0",
  "black>=24.8.0",
]
tigl = [
  "tigl3",
  "tixi3",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "B", "UP", "ANN", "C4", "D"]
ignore = ["D203", "D213"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
warn_unused_configs = true
strict = true
exclude = ["^build/"]
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=tigl_mcp --cov=tigl_mcp_server --cov-report=term-missing"
pythonpath = ["src"]
